force-app/main/default/objects/CPR_File_Run__c/CPR_File_Run__c.object-meta.xml
<CustomObject>
    <label>CPR File Run</label>
    <nameField>
        <displayFormat>CFR-{00000}</displayFormat>
        <label>CPR File Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPR File Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>