force-app/main/default/objects/CPR_File_Run__c/fields/Event_009_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_009_Count__c</fullName>
    <label>Event 009 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>