force-app/main/default/objects/CPR_File_Run__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>