force-app/main/default/objects/CPR_File_Run__c/fields/Record_001_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_001_Count__c</fullName>
    <label>Record 001 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>