force-app/main/default/objects/CPR_File_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>File_Date__c</columns>
    <columns>File_Name__c</columns>
    <columns>Notes__c</columns>
    <columns>Record_001_Count__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>